# pico-i2c-dma

./: CMakeLists.txt  LICENSE  README.md  notes.txt
examples/: CMakeLists.txt
examples/access_all_devices_x2_max_speed/: CMakeLists.txt  README.md  main.c
examples/bme280_max_speed/: CMakeLists.txt  README.md  main.c
examples/common/: CMakeLists.txt  freertos_hooks.c  mprintf.c
examples/common/include/: mprintf.h
examples/lib/: CMakeLists.txt
examples/lib/UGUI/: CMakeLists.txt  ugui.c
examples/mcp9808_basic/: CMakeLists.txt  README.md  main.c
examples/mcp9808_max_speed/: CMakeLists.txt  README.md  main.c
examples/mcp9808_max_speed_sdk_blocking/: CMakeLists.txt  README.md  main.c
examples/mcp9808_minimalistic/: CMakeLists.txt  README.md  main.c
examples/mcp9808_test_all_i2c_functions/: CMakeLists.txt  README.md  main.c
examples/mcp9808_x2_max_speed/: CMakeLists.txt  README.md  main.c
examples/ssd1306_bouncing_ball/: CMakeLists.txt  README.md  main.c  ugui_config.h
src/: CMakeLists.txt  i2c_dma.c
src/include/: i2c_dma.h
